# kdev-valgrind

./: .kde-ci.yml  CMakeLists.txt  Messages.sh  TODO  config.cpp  config.h  debug.cpp  debug.h  ijob.h  imodel.cpp  imodel.h  iparser.cpp  iparser.h  ivalgrinditem.h  iview.h  job.cpp  job.h  kdev4-valgrind.kdev4  kdevvalgrind.categories  kdevvalgrind.desktop  kdevvalgrind.desktop.cmake  kdevvalgrind.json  kdevvalgrind.qrc  kdevvalgrind.rc  launcher.cpp  launcher.h  launchmode.cpp  launchmode.h  marks.cpp  marks.h  modelwrapper.cpp  modelwrapper.h  parser.cpp  plugin.cpp  plugin.h  problemmodel.cpp  problemmodel.h  statjob.cpp  statjob.h  toolviewfactory.cpp  (+36 more)
config/: cachegrindconfigpage.cpp  cachegrindconfigpage.h  callgrindconfigpage.cpp  callgrindconfigpage.h  genericconfigpage.cpp  genericconfigpage.h  globalconfigpage.cpp  globalconfigpage.h  globalconfigpage.ui  globalsettings.kcfg  globalsettings.kcfgc  helgrindconfigpage.cpp  helgrindconfigpage.h  massifconfigpage.cpp  massifconfigpage.h  memcheckconfigpage.cpp  memcheckconfigpage.h  tools.h  valgrindcachegrindconfigpage.cpp  valgrindcachegrindconfigpage.h  valgrindcallgrindconfigpage.cpp  valgrindcallgrindconfigpage.h  valgrindgenericconfigpage.cpp  valgrindgenericconfigpage.h  valgrindhelgrindconfigpage.cpp  valgrindhelgrindconfigpage.h  valgrindmassifconfigpage.cpp  valgrindmassifconfigpage.h  valgrindmemcheckconfigpage.cpp  valgrindmemcheckconfigpage.h
core/: config.cpp  config.h  configpage.cpp  configpage.h  job.cpp  job.h  settings.cpp  settings.h  tool.cpp  tool.h  utils.cpp  utils.h  xmlconfig.cpp  xmlconfig.h  xmljob.cpp  xmljob.h  xmlsettings.cpp  xmlsettings.h
tools/: CMakeLists.txt  statjob.h
tools/cachegrind/: CMakeLists.txt  cachegrind_config.cpp  cachegrind_config.h  cachegrind_configpage.cpp  cachegrind_configpage.h  cachegrind_configpage.ui  cachegrind_job.cpp  cachegrind_job.h  cachegrind_model.cpp  cachegrind_model.h  cachegrind_parser.cpp  cachegrind_parser.h  cachegrind_settings.cpp  cachegrind_settings.h  cachegrind_tool.cpp  cachegrind_tool.h  cachegrind_view.cpp  cachegrind_view.h  cachegrind_view.ui  cachegrindconfigpage.cpp  cachegrinditem.h  cachegrindjob.cpp  cachegrindjob.h  cachegrindmodel.cpp  cachegrindmodel.h  cachegrindparser.h  cachegrindview.cpp  cachegrindview.h  configpage.cpp  configpage.h  configpage.ui  icachegrinditem.cpp  icachegrinditem.h  job.cpp  job.h  launcher.cpp  launcher.h  model.cpp  model.h  modelitem.cpp  (+11 more)
tools/callgrind/: CMakeLists.txt  callgrind_config.cpp  callgrind_config.h  callgrind_configpage.cpp  callgrind_configpage.h  callgrind_configpage.ui  callgrind_job.cpp  callgrind_job.h  callgrind_model.cpp  callgrind_model.h  callgrind_parser.cpp  callgrind_parser.h  callgrind_settings.cpp  callgrind_settings.h  callgrind_tool.cpp  callgrind_tool.h  callgrind_view.cpp  callgrind_view.h  callgrind_view.ui  callgrindconfig.ui  callgrindconfigpage.cpp  callgrinditem.cpp  callgrinditem.h  callgrindjob.cpp  callgrindjob.h  callgrindmodel.cpp  callgrindmodel.h  callgrindparser.cpp  callgrindparser.h  callgrindview.cpp  callgrindview.h  callgrindview.ui  configpage.cpp  configpage.h  configpage.ui  job.cpp  job.h  launcher.cpp  launcher.h  model.cpp  (+13 more)
tools/drd/: CMakeLists.txt  configpage.cpp  configpage.h  configpage.ui  drd_config.cpp  drd_config.h  drd_configpage.cpp  drd_configpage.h  drd_configpage.ui  drd_job.cpp  drd_job.h  drd_settings.cpp  drd_settings.h  drd_tool.cpp  drd_tool.h  job.cpp  job.h  launcher.cpp  launcher.h  settings.cpp  settings.h  tool.cpp  tool.h
tools/generic/: CMakeLists.txt  configpage.cpp  configpage.h  configpage.ui  events.cpp  events.h  ilauncher.cpp  ilauncher.h  isettings.cpp  isettings.h  job.cpp  job.h  launcher.cpp  launcher.h  model.cpp  model.h  settings.cpp  settings.h  utils.cpp  utils.h  xmlerror.cpp  xmlerror.h  xmlparser.cpp
tools/generic/core/: iconfigpage.cpp  iconfigpage.h  ijob.cpp  ijob.h  ilauncher.cpp  isettings.cpp  itool.cpp  jobstatus.cpp  jobstatus.h  launcher.cpp  launcher.h  utils.cpp
tools/generic/core/xml/: error.cpp  error.h  ixmljob.cpp  ixmljob.h  ixmlsettings.cpp  parser.cpp  parser.h
tools/generic/xml/: error.cpp  ijob.cpp  ijob.h  isettings.cpp  isettings.h  parser.cpp
tools/helgrind/: CMakeLists.txt  configpage.cpp  configpage.h  configpage.ui  helgrind_config.cpp  helgrind_config.h  helgrind_configpage.cpp  helgrind_configpage.h  helgrind_configpage.ui  helgrind_job.cpp  helgrind_job.h  helgrind_settings.cpp  helgrind_settings.h  helgrind_tool.cpp  helgrind_tool.h  helgrindconfig.ui  helgrindconfigpage.cpp  job.cpp  job.h  launcher.cpp  launcher.h  settings.cpp  settings.h  tool.cpp  tool.h  valgrindhelgrindconfig.ui  valgrindhelgrindconfigpage.cpp  valgrindhelgrindconfigpage.h
tools/massif/: CMakeLists.txt  configpage.cpp  configpage.h  configpage.ui  job.cpp  job.h  launcher.cpp  launcher.h  massif_config.cpp  massif_config.h  massif_configpage.cpp  massif_configpage.h  massif_configpage.ui  massif_job.cpp  massif_job.h  massif_model.cpp  massif_model.h  massif_parser.cpp  massif_parser.h  massif_settings.cpp  massif_settings.h  massif_snapshot.cpp  massif_snapshot.h  massif_tool.cpp  massif_tool.h  massif_view.cpp  massif_view.h  massif_view.ui  massifconfigpage.cpp  massifitem.cpp  massifitem.h  massifjob.cpp  massifjob.h  massifmodel.cpp  massifmodel.h  massifparser.cpp  massifparser.h  massifview.cpp  massifview.h  model.cpp  (+14 more)
tools/memcheck/: CMakeLists.txt  configpage.cpp  configpage.h  configpage.ui  error.cpp  error.h  job.cpp  job.h  launcher.cpp  launcher.h  memcheck_config.cpp  memcheck_config.h  memcheck_configpage.cpp  memcheck_configpage.h  memcheck_configpage.ui  memcheck_job.cpp  memcheck_job.h  memcheck_settings.cpp  memcheck_settings.h  memcheck_tool.cpp  memcheck_tool.h  memcheckconfigpage.cpp  memcheckfakemodel.cpp  memcheckitems.h  memcheckitemsimpl.cpp  memcheckjob.cpp  memcheckjob.h  memcheckparser.cpp  memcheckparser.h  model.cpp  model.h  modelitem.cpp  modelitem.h  parser.cpp  parser.h  settings.cpp  settings.h  tool.cpp  tool.h  valgrindmemcheckconfig.ui
(+129 files in other folders)
